[package]
name = "Exeguttor_Tests"
description = "A testing harness for running tests for the Exeguttor AMM and its libraries"
version = "0.1.0"
edition = "2021"
authors = ["ControlCplusControlV"]
license = "Apache-2.0"

[dev-dependencies]
serde = { version = "1.0", features = ["derive"] }
fuels = { version = "0.31.1", features = ["fuel-core-lib"] }
tokio = { version = "1.12", features = ["rt", "macros"] }
fuel-chain-config = { version = "0.14.1", features = [] }
zeroize = { version = "1.5.7", features = [] }
zeroize_derive = { version = "1.3.3", features = [] }

[[test]]
harness = true
name = "integration_tests"
path = "tests/harness.rs"